--- a/fly.toml
+++ b/fly.toml
@@ -16,8 +16,11 @@ primary_region = 'lhr'
   min_machines_running = 0
   processes = ['app']
 
+  [http_service.autoscale]
+    min = 1
+    max = 1
+
 [[vm]]
-  memory = '1gb'
+  memory = '256mb'
   cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 1024
